fixed broken css

--- a/assets/css/scenic.css
+++ b/assets/css/scenic.css
@@ -265,7 +265,7 @@ html, body {
 
 #projectPanel {
 	width: 70%;
-	margin-left: auto;t
+	margin-left: auto;
 	margin-right: auto;
 	display: block;
 }
@@ -304,6 +304,7 @@ html, body {
 	border-radius: 6px;
 	box-shadow: 0 0 2px 2px rgba(16, 16, 16, 0.7);
 }
+
 
 .projectText {
 	width: 80%;
